# Cross_assets_pair_analyzer

./: .gitignore  PROJECT_BRIEF  PROJECT_BRIEF.md  README.md  pyproject.toml
data/: download_data.py
data/raw/: prices.csv
notebooks/: analysis_pairs.ipynb  analysisi_pairs.ipynb
src/: core.py
